// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayDropDownWithItems renders a DropDownWithItems 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-1"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-primary"
        type="button"
      >
        Click Me
      </button>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithItems renders a DropDownWithItems with caption 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-4"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-primary"
        type="button"
      >
        Click Me
      </button>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithItems renders a DropDownWithItems with checkbox 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-3"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-primary"
        type="button"
      >
        Click Me
      </button>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithItems renders a DropDownWithItems with footer content 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-5"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-primary"
        type="button"
      >
        Click Me
      </button>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithItems renders a DropDownWithItems with help text 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-6"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-primary"
        type="button"
      >
        Click Me
      </button>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithItems renders a DropDownWithItems with radio group 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-2"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-primary"
        type="button"
      >
        Click Me
      </button>
    </div>
  </div>
</body>
`;

exports[`ClayDropDownWithItems renders a DropDownWithItems with search 1`] = `
<body>
  <div>
    <div
      class="dropdown"
    >
      <button
        aria-controls="clay-dropdown-menu-7"
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn btn-primary"
        type="button"
      >
        Click Me
      </button>
    </div>
  </div>
</body>
`;
